# loom

./: .gitignore  LICENSE  README.md
firmware/: Cargo.toml  diagram.json  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/examples/: http_server_page.html  http_server_ws.rs
firmware/src/: ble.rs  data_exchange.rs  ekv_file_flash.rs  lib.rs  main.rs  util.rs  wifi.rs
loom_app/: loom_app.db  pubspec.yaml  user_identity.txt
loom_app/android/app/: build.gradle.kts
loom_app/android/app/src/main/: AndroidManifest.xml
loom_app/integration_test/: simple_test.dart
loom_app/ios/Runner/: Info.plist
loom_app/ios/Runner.xcodeproj/: project.pbxproj
loom_app/lib/: main.dart
loom_app/lib/src/bindings/: app_bindings.dart
loom_app/lib/src/controllers/: app_values_controller.dart  ble_provisioning_controller.dart  clips_controller.dart  direct_messages_controller.dart  feed_controller.dart  friends_controller.dart  images_controller.dart  main_controller.dart  posts_controller.dart  profile_controller.dart  profiles_controller.dart  saved_controller.dart  settings_controller.dart  totem_proximity_controller.dart  totems_controller.dart
loom_app/lib/src/models/: post.dart  profile.dart  totem.dart
loom_app/lib/src/network/: ble_provisioner.dart  ble_provisioning_spec.dart  networker.dart  wifi_connector.dart
loom_app/lib/src/pages/: alerts_page.dart  ble_provisioning_page.dart  circle_page.dart  clips_page.dart  direct_messages_page.dart  feed_page.dart  friend_profile_page.dart  friends_page.dart  full_screen_image_page.dart  full_screen_post_page.dart  inbox_page.dart  profile_page.dart  qr_scanner_page.dart  saved_page.dart  totems_page.dart
loom_app/lib/src/pages/Settings/: Settings_page.dart  settings_debug_page.dart  settings_general_page.dart  settings_page.dart  settings_privacy_page.dart
loom_app/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
loom_app/lib/src/storage/: totem_wifi_store.dart
loom_app/lib/src/theme/: loom_theme.dart
loom_app/lib/src/util/: image_store.dart  image_store_impl.dart  image_store_io.dart  image_store_web.dart
loom_app/lib/src/widgets/: expandable_text.dart  path_image.dart  path_image_io.dart  path_image_web.dart
loom_app/linux/flutter/: generated_plugins.cmake
loom_app/linux/runner/: my_application.cc
loom_app/macos/Flutter/: GeneratedPluginRegistrant.swift
loom_app/macos/Runner.xcodeproj/: project.pbxproj
loom_app/rust/: Cargo.toml
loom_app/rust/src/: data_exchange.rs  frb_generated.rs  lib.rs
loom_app/rust/src/api/: simple.rs
loom_app/rust_builder/: pubspec.yaml
loom_app/rust_builder/android/: build.gradle  settings.gradle
loom_app/rust_builder/ios/: rust_lib_loom_app.podspec
loom_app/rust_builder/linux/: CMakeLists.txt
loom_app/rust_builder/macos/: rust_lib_loom_app.podspec
loom_app/rust_builder/windows/: CMakeLists.txt
loom_app/windows/flutter/: generated_plugins.cmake
shared/: Cargo.toml
shared/src/: db.rs  fbdb.rs  lib.rs  model.rs
shared/src/db/: mod.rs
(+3 files in other folders)
