[package]
name = "firmware"
version = "0.1.0"
authors = ["Yandrik <me@yandrik.dev>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "firmware"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[[example]]
name = "http_server"


[[example]]
name = "http_server_ws"

[lib]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["alloc", "experimental"] }
esp-idf-hal = { version = "0.45.2", features = ["embassy-sync", "critical-section", "alloc", "experimental"] }
anyhow = "1.0.100"
heapless = { version = "0.9.1", features = ["serde", "alloc"] }
enumset = { version = "1.1.10", features = ["alloc", "serde"] }
serde = { version = "1.0.228", features = ["alloc"] }
serde_json = { version = "1.0.145", features = ["alloc"] }
postcard = { version = "1.1.3", features = ["alloc"] }
embedded-svc = "0.28.1"
hmac = "0.12.1"
sha2 = "0.10.9"
base64 = "0.22.1"
base32 = "0.5.1"
shared = { path = "../shared" }

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc.) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
embuild = "0.33"
