[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[features]
sqlite = ["rusqlite"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
heapless = "0.9.2"
postcard = { version = "1.1.3", features = ["alloc"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
uuid = "1.19.0"
