[package]
name = "rust_lib_loom_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.11.1", features = ["chrono"] }
shared = { path = "../../shared", features = ["sqlite"] }
chrono = "0.4.42"
anyhow = "1.0.75"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
